[package]
name = "zoidberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dotenv = "0.15.0"
openai = "1.0.0-alpha.14"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
